<resources>
    <string name="app_name">SmartGroups</string>
    <string name="Test_String">Test_String</string>
    <string name="Interactividad">Interactivity</string>
    <string name="Perfil">Profile</string>
    <string name="Inicio">Home</string>
    <string name="Archivos">Files</string>
    <string name="Grupos_Chat">Groups/Chat</string>
    <string name="no_groups_created">It looks like you do not have any groups created</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder_files">Files</string>
    <string name="placeholder_home">Home</string>
    <string name="placeholder_interactivity">Interactivity</string>
    <string name="placeholder_profile">Profile</string>
    <string name="group_name">Name of the group</string>
    <string name="participants">Participants</string>
    <string name="badges">Badges</string>
    <string name="desc">Placeholder Image</string>
    <string name="asignaturas">Subjects</string>
    <string name="placeholder">Placeholder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_subjects">action_subjects</string>
    <string name="action_settings">action_settings</string>
    <string name="title_activity_main__teacher">MainActivity_Teacher</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="administraci_n">Administration</string>
    <string name="coordinapp">SmartGroups</string>
    <string name="inicio_de_sesi_n">Login</string>
    <string name="e_mail">E-Mail</string>
    <string name="contrase_a">Password</string>
    <string name="iniciar_sesi_n">Login</string>
    <string name="crear_una_cuenta"><u>Create an account</u></string>
    <string name="nombre_completo">Full name</string>
    <string name="repetir_contrase_a">Repeat password</string>
    <string name="registrase_como_administrador">Register as an administrator</string>
    <string name="registrarse">Register</string>
    <string name="iniciar_sesi_n_underline"><u>Login</u></string>
    <string name="registro">Register</string>
    <string name="rellena_estos_campos_si_eres_alumno">Fill in these fields if you are a student</string>
    <string name="nombre_y_apellidos_del_profesor_a">Teacher\'s first and last name</string>
    <string name="curso_en_el_que_se_imparte_la_asignatura">Course in which the subject is taught</string>
    <string name="nombre_completo_del_profesor">Full name of teacher</string>
    <string name="nombre_completo_del_la_profesor_a">Full name of teacher</string>
    <string name="cursos">Courses</string>
    <string name="fechas">Dates</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="courses">Courses</string>
    <string name="dates">Dates</string>
    <string name="peticiones_pendientes">Pending petitions</string>
    <string name="name_of_the_student">Name of the student</string>
    <string name="requested_course">Requested course</string>
    <string name="grupos_disponibles">Groups available</string>
    <string name="grupos">Groups</string>
    <string name="letra_del_curso">Course letter</string>
    <string name="denegar">Refuse</string>
    <string name="name_of_the_course">Name of the course</string>
    <string name="email_of_the_student">Email of the student</string>
    <string name="name_of_the_group">Name of the group</string>
    <string name="expandir">Expand</string>
    <string name="colapsar">Collapse</string>
    <string name="mis_grupos">My groups</string>
    <string name="parece_que_no_tienes_ning_n_chat_creado_puedes_crear_un_chat_pulsando_el_bot_n">It looks like you don\'t have a chat created. You can create a chat by pressing the + button</string>
    <string name="solicitudes_de_grupo">Group requests</string>
    <string name="_1">1.</string>
    <string name="_2">2.</string>
    <string name="_3">3.</string>
    <string name="selecciona_a_los_participantes">Select participants</string>
    <string name="_1_selecciona_el_curso">1. Select the course</string>
    <string name="_2_selecciona_la_asignatura">2. Select the subject</string>
    <string name="_3_selecciona_a_los_participantes">3. Select participants</string>
    <string name="_3_selecciona_los_participantes">3. Select participants</string>
    <string name="name_of_the_requester">Name of the requester</string>
    <string name="aceptar">Accept</string>
    <string name="rechazar">Reject</string>
    <string name="name_of_the_course_name_of_the_subject">Name of the course - Name of the subject</string>
    <string name="participant_name">Participant name</string>
    <string name="ver_participantes">View participants</string>
    <string name="pulsa_el_bot_n_para_enviar_una_solicitud_de_creaci_n_de_grupo">Press the + button to send a request to create a group</string>
    <string name="peticiones">Petitions</string>
    <string name="chats_grupales">Group chats</string>
    <string name="chats_con_el_profesor">Chats with the teacher</string>
    <string name="coursename">CourseName</string>
    <string name="participantes">Participants</string>
    <string name="subjectname">SubjectName</string>
    <string name="escribe_un_mensaje">Write a message</string>
    <string name="role_of_the_participant">Role of the participant</string>
    <string name="name_of_the_participant">Name of the participant</string>
    <string name="email_of_the_participant">Email of the participant</string>
    <string name="cerrar_sesi_n">Log out</string>
    <string name="no_tienes_ning_n_grupo_creado_o_no_est_s_en_ning_n_grupo_puedes_crear_un_nuevo_grupo_pulsando_el_bot_n">You have no group created or you are not in any group. You can create a new group by clicking the + button</string>
    <string name="profesor_a">Teacher</string>
    <string name="individuales">Individuals</string>
    <string name="name_of_the_subject">Name of the subject</string>
    <string name="sender_message">Sender message</string>
    <string name="_3_selecciona_el_modo_de_creaci_n_de_grupos">3. Select group creation mode</string>
    <string name="_4_introduce_el_n_mero_de_alumnos_por_grupo">4. Enter number of students per group</string>
    <string name="introduce_un_n_mero">Enter a number</string>
    <string name="name_of_receiver">Name of receiver</string>
    <string name="name_of_the_sender">Name of the sender</string>
    <string name="content_of_the_message">Content of the message</string>
    <string name="test_label">Test label</string>
    <string name="peticion_propia">Own request</string>
    <string name="escribe_algo">Write something</string>
    <string name="enviar">Send</string>
    <string name="ask_for_card">Ask for card</string>
    <string name="createinputtextcard">CreateInputTextCard</string>
    <string name="createmultichoicecard">CreateMultichoiceCard</string>
    <string name="createremindercard">CreateReminderCard</string>
    <string name="selecciona_el_tipo_de_tarjeta_que_quieres_crear">Select the type of card you want to create</string>
    <string name="entrada_de_texto">Text input</string>
    <string name="multirespuesta">Multiresponse</string>
    <string name="recordatorio">Reminder</string>
    <string name="responder">Reply</string>
    <string name="incluir_a_los_alumnos_restantes">Include remaining students</string>
    <string name="groupname">GroupName</string>
    <string name="estad_sticas">Statistics</string>
    <string name="seleccionar_curso_asignatura">Select course/subject</string>
    <string name="alumnos">Students</string>
    <string name="selecciona_un_curso_y_una_asignatura_sobre_el_que_mostrar_informaci_n">Select a course and subject to display information on</string>
    <string name="por_ahora_no_tienes_ninguna_petici_n">For the moment you do not have any requests</string>
    <string name="selecciona_a_los_participantes_que_quieres_incluir_en_el_grupo">Select the participants you want to include in the group and the spokesperson</string>
    <string name="selecciona_un_curso_y_una_asignatura_sobre_la_que_mostrar_informaci_n">Select a course and a subject to display information on</string>
    <string name="selecciona_un_curso_y_una_asignatura_sobre_la_que_mostrar_informaci_n_para_empezar_a_usar_la_app">Select a course and a subject to display information about to start using the app</string>
    <string name="a_n_no_tienes_creado_ning_n_grupo_puedes_pulsar_el_bot_n_para_crear_un_grupo">You have not yet created a group. You can click the + button to create a group.</string>
    <string name="_1_selecciona_el_modo_de_creaci_n_de_grupos">1. Select group creation mode</string>
    <string name="indicar_el_n_mero_de_alumnos_por_grupo">Indicate the number of students in each group</string>
    <string name="indicar_el_n_mero_de_grupos">Indicate the number of groups</string>
    <string name="_2_introduce_el_n_mero_de_alumnos_por_grupo">2. Enter number of students per group</string>
    <string name="_2_introduce_el_n_mero_de_grupos">2. Enter the number of groups</string>
    <string name="este_texto_depende_de_a_quien_se_le_est_mostrando_el_fragmento">This text depends on who is being shown the fragment</string>
    <string name="no_individual_chats_teacher">You don\'t have any individual chat yet. Wait for a student to write to you or create one using the + button.</string>
    <string name="todav_a_no_tienes_ning_n_grupo_individual_creado_puedes_esperar_a_que_un_alumno_te_hable_para_que_aparezca_o_pulsar_el_bot_n_para_crear_uno">You do not have any individual groups created yet. You can either wait for a student to talk to you before it appears or press the + button to create one.</string>
    <string name="message_title">Message Title</string>
    <string name="uploader_name">Uploader name</string>
    <string name="uploaded_date">Uploaded date</string>
    <string name="descargar">Download</string>
    <string name="file_name">File name</string>
    <string name="todav_a_no_se_ha_enviado_ning_n_archivo_los_archivos_aparecer_n_aqu">No files have been submitted yet. The files will appear here</string>
    <string name="noStatistics">There are no statistics for any group yet. You can start getting statistics by creating a new activity with the + button</string>
    <string name="noGroups">There are no groups created yet. You can create a new group to start sending activities in the Groups tab</string>
    <string name="_1_selecciona_el_primer_grupo">1. Select the first group</string>
    <string name="_2_selecciona_el_segundo_grupo">2. Select the second group</string>
    <string name="errormessage">ErrorMessage</string>
    <string name="si_el_reparto_es_desigual_introducir_a_los_alumnos_restantes_en_un_grupo_de_un_tama_o_m_s_grande">If the distribution is uneven, put the remaining students into a larger group size</string>
    <string name="Task">3. Task</string>
    <string name="Divisible">is divisible</string>
    <string name="Topics">has several topics</string>
    <string name="Solutions">has several solutions</string>
    <string name="Group_Type">4. Groups Type</string>
    <string name="Random">Ramdom</string>
    <string name="Homogeneous">Homogeneous</string>
    <string name="Heterogeneous">Heterogeneous</string>
    <string name="Data_groups">5. Data used to create the groups</string>
    <string name="Videos">Videos</string>
    <string name="Exercises">Exercises</string>
    <string name="Both">Both</string>
    <string name="Collaborative_Learning_Flow_Patterns">Collaborative Learning Flow Patterns</string>
    <string name="Simple">Simple</string>
    <string name="Jigsaw">Jigsaw</string>
    <string name="Pyramid">Pyramid</string>
    <string name="Think_Pair_Share">Think-Pair-Share</string>
</resources>